web/wp-content/themes/lfevents/src/assets/scss/modules/_pricing-grid.scss
.pricing-grid {
  width: auto;
  margin: 0 auto $global-margin;

  .attendee-type {
    margin-bottom: $global-margin/2;

    @include breakpoint(large) {
      display: inline-flex;
      align-items: stretch;
      position: relative;
      left: 50%;
      transform: translateX(-50%);

      > * {
        width: 10rem;
        margin: 0 $global-margin/4;

        &:first-child {
          text-align: right;
        }
      }
    }

    @include breakpoint(xlarge) {
      > * {
        width: 12rem;
      }
    }

    @include breakpoint(xxlarge) {
      > * {
        width: 14rem;
      }
    }
  }

  .attendee-type--name {
    font-weight: bold;

    @include breakpoint(large) {
      display: flex;
      justify-content: flex-end;
      align-items: center;
      font-weight: normal;
      font-size: rem-calc(20);
      margin-left: 0;
      padding-right: $global-margin/2;
      padding-left: $global-margin/2;
      background-color: rgba(0,0,0,0.05);
      background: linear-gradient(90deg, rgba(0,0,0,0.05) 33%, rgba(0,0,0,0) 100%);
      border-radius: 1rem 0 0 1rem;
      border-width: 1px;
      border-style: solid;
      border-right-width: 0;
    }

    @include breakpoint(xlarge) {
      width: 16rem;
    }
  }

  .price-cell {
    padding: 0.75rem 1.25rem;
    border-width: 0.5rem;
    line-height: 1.2;
    font-weight: bold;
    display: flex;
    position: relative;

    > * {
      flex-grow: 1;
    }

    &.expired {
      opacity: 0.7;

      .price-amount s {
        opacity: 0.4;
      }
    }

    @include breakpoint(large) {
      display: block;
    }
  }

  .price-window {
  }

  .price-window--name {
    margin: 0;
    font-weight: bold;
  }

  .price-window--date-range {
    display: block;
    line-height: 1.2;
    font-weight: normal;

    @include breakpoint(large) {
      font-weight: bold;
      font-size: rem-calc(10);
      white-space: nowrap;
    }

    @include breakpoint(xlarge) {
      font-size: rem-calc(12);
    }

    @include breakpoint(xxlarge) {
      font-size: rem-calc(14);
    }
  }

  .price-amount {
    font-size: 2rem;
    text-align: right;

    @include breakpoint(large) {
      font-size: 1.5rem;
      line-height: 1;
      text-align: center;
      margin-top: 1rem;
      margin-bottom: 1rem;
    }

    @include breakpoint(xlarge) {
      font-size: rem-calc(25);
    }

    @include breakpoint(xxlarge) {
      font-size: rem-calc(31);
    }

    .expired-label {
      display: block;
      font-weight: normal;
      font-size: rem-calc(14);
      line-height: 1;

      @include breakpoint(large) {
        position: absolute;
        top: auto;
        right: 0;
        bottom: 50%;
        left: 0;
        margin-bottom: 1em;
      }
    }
  }

  @include breakpoint(large) {
    padding-top: 4.25rem;

    .attendee-type:not(:first-child) .price-window {
      display: none;
    }

    .price-window {
      position: absolute;
      top: auto;
      right: 0;
      bottom: calc(100% + #{$global-margin/2});
      left: 0;
      height: 4.25rem;
      padding: 0.75rem;
      border-radius: 1rem 1rem 0 0;
      opacity: 0.75;
    }
  }
}

